# IMF-NVC

./: .eslintrc.json  .gitignore  README.md  convert.py  next.config.js  next.config.mjs  ops.py  output.txt  package-lock.json  package.json  pnpm-lock.yaml  server.js  server2.js  tailwind.config.js  test.py  tfjs-webgpu-sample.html  torchscript.py  tsconfig.json  webgl_supported_ops.json  webgpu_supported_ops.json  webpack.config.js  webpack.config.ts
imf-decoder/: .npmrc  Cargo.toml  README.md  context.sh  dir.txt  eslint-config.json  imf-decoder.combined  js+rs.txt  package-lock.json  package.json  pnpm-lock.yaml  project.txt  run.sh  tree.txt  tsconfig.json  webpack.config.js  webpack.worker.config.js
imf-decoder/js/: decoder.js  index.js  index.ts  js.combined  log-interceptor.ts  tfjs_bindings.js
imf-decoder/js/decoder/: decoder.ts  player.ts  worker.ts
imf-decoder/js/types/: imf_decoder.d.ts  index.ts  wasm.d.ts
imf-decoder/js/utils/: performance-monitor.ts  wasm-test.ts
imf-decoder/shaders/: shader.wgsl
imf-decoder/src/: lib.rs  network.rs  player.rs  src.combined  types.rs
imf-decoder/src/decoder/: frame.rs  mod.rs  queue.rs  tensor.rs  webgl.rs  worker.rs
imf-decoder/src/imf_render/: context.rs  mod.rs
imf-decoder/src/utils/: memory.rs  metrics.rs  mod.rs
imf-decoder/src/wasm/: bindings.rs  mod.rs
imf-decoder/styles/: styles.css
imf-decoder/www/: index.html
public/: index.html  service-worker.js
src/: ONNXModelLoader.ts  ONNXModelLoader_delete.ts  index.ts  middleware.ts  service-worker-registration.ts
test/: index.html  script.js  styles.css  (+1 more)
(+27 files in other folders)
