[package]
name = "imf-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "Performance",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"


[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1