[package]
name = "imf-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wgpu = { version = "0.17", features = ["webgl"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.13", features = ["derive"] }
log = "0.4"
wasm-logger = "0.2"
futures = "0.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "CanvasRenderingContext2d",
    "ImageData",
    "ImageBitmap",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "Performance",
    "console",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuBuffer",
    "GpuTexture",
    "WebGl2RenderingContext",
]